<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:padding="@dimen/sideMargin">

    <TextView
        style="@style/titleText"
        android:text="@string/ex_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputOrgName"
        style="@style/inputTextBox"
        android:hint="@string/input_org_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/searchButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/search_button"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/orgNameText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputOrgName" />

    <TextView
        android:id="@+id/orgNameText"
        style="@style/resultTextView"
        app:layout_constraintBottom_toTopOf="@id/orgRepoSizeText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchButton"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="Organization name" />

    <TextView
        android:id="@+id/orgRepoSizeText"
        style="@style/resultTextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/orgNameText"
        tools:text="9999999999999999" />

    <Button
        android:id="@+id/toEx1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ex_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/toEx3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ex_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>